# cargo-depdiff

./: Cargo.toml  README.md
.github/workflows/: bloat.yaml  test.yaml
src/: main.rs  sources.rs
