[package]
name = "cargo-depdiff"
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1"
either = "~1"
cargo-lock = "~4"
git2 = "~0.13"
itertools = "~0.9"
structopt = "~0.3"
