[package]
name = "cargo-depdiff"
version = "0.1.0"
authors = [
	"Michal 'vorner' Vaner <vorner@vorner.cz>",
	"Ondra Pelech <ondra.pelech@gmail.com>",
]
edition = "2018"
license = "Apache-2.0/MIT"
description = "Tool for examining changes to dependencies"
readme = "README.md"
repository = "https://github.com/avast/cargo-depdiff"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1"
either = "~1"
cargo = "~0.51"
cargo-lock = "~6"
difference = "~2"
git2 = "~0.13"
itertools = "~0.10"
semver = "~0.10"
structopt = "~0.3"
thiserror = "~1"
